Refactor: Refactored the code to take Id from params in all apis
