# app/routes/notes.routes.js
@@ -3,8 +3,8 @@ const auth = require('../../utilities/auth');
 
 module.exports = (app) => {
     app.post('/createnote',auth.authentication, notes.createnotes);
-    app.put('/updatenote',auth.authentication, notes.updatenotes);
-    app.delete('/deletenote',auth.authentication, notes.deletenotes);
+    app.put('/updatenote/:noteId',auth.authentication, notes.updatenotes);
+    app.delete('/deletenote/:noteId',auth.authentication, notes.deletenotes);
     app.get('/getnotes',auth.authentication, notes.getnotes);
-    app.get('/getnotebyId',auth.authentication, notes.getnotebyId);
+    app.get('/getnotebyId/:noteId',auth.authentication, notes.getnotebyId);
 }
